# daily-briefing-bot

./: .dockerignore  .env.dashboard.example  .env.private.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.dashboard.yml  docker-compose.private.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  requirements.txt
apps/web/: Dockerfile  package-lock.json  package.json
daily_briefing/: __init__.py  alerts.py  cli.py  config.py  doctor.py  launchd.py  llm.py  push.py  quality.py  redfox.py  reports.py  runtime.py  storage.py
deploy/launchd/: daily-report.plist.example  interval-report.plist.example  run_report.sh.example
docs/: architecture.md  configuration.md  deployment-launchd.md  development.md  open-source-release-checklist.md  private-dashboard.md  report-matrix.md  running-reports.md  runtime-storage.md  security.md  subscription-dashboard.md
examples/env/: ai_daily.env.example  astock_daily.env.example  cctv_daily.env.example  common.env.example  douyin_daily.env.example  wechat_daily.env.example  weibo_daily.env.example  zsxq_daily.env.example
scripts/: migrate_launchd_to_dashboard.py
tests/: test_ai_daily.py  test_alerts.py  test_astock_daily.py  test_config.py  test_doctor.py  test_launchd.py  test_llm.py  test_push.py  test_quality.py  test_redfox.py  test_runtime.py  test_smoke.py  test_storage.py  test_wechat_daily.py
work/: daily_image.py
(+34 files in other folders)
