[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-briefing-bot"
version = "0.1.0"
description = "AI-powered daily briefing reports for social, news, and creator-community sources."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "jianxiong-ai" }
]
keywords = ["daily-briefing", "llm", "feishu", "wecom", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Office/Business :: News/Diary",
]
dependencies = [
  "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/jianxiong-ai/daily-briefing-bot"
Issues = "https://github.com/jianxiong-ai/daily-briefing-bot/issues"

[project.scripts]
daily-briefing = "daily_briefing.cli:main"

[tool.setuptools]
packages = ["daily_briefing"]
